aulas/cap6/target/instance.tf
resource "aws_instance" "minha-instancia" {
  ami           = "ami-0e68dc81dc36750a1"
  instance_type = "t3.small"

  associate_public_ip_address = false
  tags = {
    Name = "vm-target"
  }
}
